Grammar.bnf
<expr>           ::= <indefdate>
                  | <defdate>

<indefdate>      ::= <month> <daynum>
                 | <namedindefdate>
                 | <numdaymod> <month>
                 | <day>
                 | <day> + <daynum>

<date>           ::= <indefdate>
                 | <indefdate> <year>
                 | <seqmod> <indefdate>
                 | <int> <delta> "before" <date>
                 | <int>< <delta> "after" <date>
                 | <nameddate>
                 | <numdaymod> <year>

<seqmod>         ::= "next"
                 | "last"
                 | "this"

<numdaymod>      ::= <optdet> <ord> "day" "of"

<year>           ::= <int> 
                 | <int> <era>
                 | <var>

<era>            ::= "bc"
                 | "ad"
                 | "bce" 
                 | "ce"

<month>          ::= "january"
                 | "february"
                 | "march"
                 | "april"
                 | "may"
                 | "june"
                 | "july"
                 | "august"
                 | "september"
                 | "october"
                 | "november"
                 | "december"
                 | <var>

<day>            ::= "monday"
                 | "tuesday"
                 | "wednesday"
                 | "thursday"
                 | "friday"
                 | "saturday"
                 | "sunday"
                 | <var>

<ord>            ::= <int>"st"
                 | <int>"nd"
                 | <int>"rd"
                 | <int>"th"

<optdet>         ::= "the"
                 | ""

<daynum>         ::= <int>

<namedindefdate> ::= "Boxing Day" 
                 | "Christmas Eve" 
                 | "Groundhog Day"
                 | "Halloween"
                 | <var>

<var>            ::= "{"<alphanum>"}"
